# stake-dev-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  discord-v1.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: chunked_release.rs  commands.rs  file_chunker.rs  lib.rs  main.rs  math_sync.rs  preview.rs  profiles.rs  state.rs  teams.rs
crates/desktop/src/github/: api.rs  auth.rs  mod.rs
crates/lgs/: Cargo.toml
crates/lgs-wasm/: Cargo.toml
crates/lgs-wasm/preview-template/: bundle.example.json  index.html  preview-shim.js  runtime.js
crates/lgs-wasm/src/: lib.rs
crates/lgs/src/: admin.rs  config.rs  devtool.rs  error.rs  lib.rs  main.rs  math_engine.rs  replay.rs  routes.rs  saved_rounds.rs  session.rs  settings.rs  state.rs  tls.rs  types.rs
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: Picker.svelte  api.ts
ui/src/lib/components/: GithubSignInDialog.svelte  MathSyncOverlay.svelte
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/teams/: +page.svelte
ui/src/routes/test/: +page.svelte
