[workspace]
resolver = "2"
members = [
    "crates/lgs",
    "crates/desktop",
]

[workspace.package]
version = "0.3.8"
edition = "2024"
authors = ["simnJS"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sonic-rs = "0.3"
zstd = "0.13"
dashmap = "6.1"
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.20"
parking_lot = "0.12"
memmap2 = "0.9"
arc-swap = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
time = "0.3"
dirs = "5.0"
pem = "3.0"
include_dir = "0.7"
mime_guess = "2.0"

[profile.release]
opt-level = 3
# "thin" LTO gives ~95% of "fat"'s perf gains with 3-5× less compile time.
lto = "thin"
# Default (16) parallelises codegen; codegen-units = 1 kills compile time for
# a tiny runtime gain.
strip = true
panic = "abort"

# Ultra-optimised profile for shipping canonical releases. Not used by CI.
# Invoke with: cargo build --profile release-fat
[profile.release-fat]
inherits = "release"
lto = "fat"
codegen-units = 1
