[package]
name = "stake-dev-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Desktop dev tool for slot games (LGS + launcher)"

[lib]
name = "stake_dev_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stake-dev-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lgs = { path = "../lgs" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
uuid.workspace = true
url.workspace = true
dirs.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
