[package]
name = "lgs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
# Hardcoded (not `license.workspace = true`) because wasm-pack's manifest
# parser doesn't follow workspace inheritance for `license` — it errors
# with "invalid type: map, expected a string" on `pnpm wasm:build`.
license = "MIT"
description = "Browser-side preview engine for Stake Dev Tool — replaces the local RGS with WASM so previews can be shared via a static URL."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http"] }
rand = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
ruzstd = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
]

[profile.release]
# WASM-specific tuning: smaller binaries, since each preview ships the
# .wasm to the browser.
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-pack ships an old `wasm-opt` that errors on bulk-memory ops; the
# `rustc`-emitted module relies on those by default. Skip the post-process
# pass — the file is already optimised by `opt-level = "z"` + LTO.
wasm-opt = false
