[package]
name = "lgs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance Local Game Server for slot games"

[lib]
name = "lgs"
path = "src/lib.rs"

[[bin]]
name = "lgs"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic-rs.workspace = true
zstd.workspace = true
dashmap.workspace = true
rand.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true
tracing.workspace = true
axum-server.workspace = true
rcgen.workspace = true
rustls.workspace = true
time.workspace = true
dirs.workspace = true
pem.workspace = true
uuid = { workspace = true }
include_dir.workspace = true
mime_guess.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
